--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Landing Page</title>
 </head>
 <body>
     
@@ -17,7 +18,12 @@
     </div>
 
     <div class="hero-section">
-
+        <div class="hero">
+            <h2>This website is awesome</h2>
+            <sub>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+            <button>Sign up</button>
+        </div>
+        <div class="placeholder">this is a placeholder for an image</div>
     </div>
 
     <div class="media-section">
@@ -35,7 +41,7 @@
     </div>
 
     <div class="footer">
-        
+
     </div>
 
 
