Added structure for media section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,25 @@
     </div>
 
     <div class="media-section">
-
+        <h2>Some random information.</h2>
+        <div class="media-cluster">
+            <div class="media">
+                <div class="placeholder"></div>
+                <sub>this is some subtext under an illustration or image</sub>
+            </div>
+            <div class="media">
+                <div class="placeholder"></div>
+                <sub>this is some subtext under an illustration or image</sub>
+            </div>
+            <div class="media">
+                <div class="placeholder"></div>
+                <sub>this is some subtext under an illustration or image</sub>
+            </div>
+            <div class="media">
+                <div class="placeholder"></div>
+                <sub>this is some subtext under an illustration or image</sub>
+            </div>
+        </div>
     </div>
 
 
