Added structure for quote section.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 
 
     <div class="quote-section">
-
+        <div>
+            <em>This is an inspiring quote, etc.</em>
+            <b>-Thor, God of Thunder</b>
+        </div>
     </div>
 
 
