Added structure for banner.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@
 
 
     <div class="banner">
-
+        <div>
+            <h1>Call to action! It's time!</h1>
+            <sub>Sign up for our product by clicking that button right over there!</sub>
+        </div>
+        <button>Sign up</button>
     </div>
 
     <div class="footer">
