--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <sub>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
             <button>Sign up</button>
         </div>
-        <div class="placeholder">this is a placeholder for an image</div>
+        <sub class="placeholder">this is a placeholder for an image</sub>
     </div>
 
     <div class="media-section">
